--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -1929,7 +1929,7 @@ The relation between the complexity classes is \cite{Arora:2009:CCM:1540612}:
 \end{eqnarray*}
 We do not consider \emph{OWL 2 Full} 
 due to its high worst case complexity (undecidability) and
-as $\mathcal{R}$ constraint types are already expressible either by \emph{OWL 2 QL} or \emph{OWL 2 DL}.
+as $\mathcal{R}$ constraint types are already expressible either by \emph{OWL 2 QL} or \emph{OWL 2 DL} (except one constraint type).
 
 %name "keyword" ; propertyDefinition keyword ; valueType xsd:string ;
 
