--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -485,7 +485,18 @@ further research and development is needed.
 \subsection{Motivation and Overview}
 \label{motivation}
 
-\textcolor{red}{je 1 Absatz warum wichtig / askepte von reasoning - semantics - expressivity vs. performance }
+Based on our work in the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group, 
+we identified and published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
+Each of these requirements corresponds to a constraint type from which concrete constraints are instantiated to be checked against RDF data.
+Requirements/constraint types are uniquely identified by alphanumeric technical identifiers.
+\emph{Minimum qualified cardinality restrictions} (\emph{R-75}) is an example of a constraint type which corresponds to the requirement {\small\emph{R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES}}. 
+We recently published a technical report \cite{BoschNolleAcarEckert2015}
+%\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} 
+(serving as appendix of this paper) 
+in which we explain each requirement/constraint type in detail and give examples for each represented by different constraint languages.
+%For some of these constraint types, reasoning may be performed to improve data quality.
+
+%\textcolor{red}{je 1 Absatz warum wichtig / askepte von reasoning - semantics - expressivity vs. performance }
 
 A major shortcoming when validating RDF data is \emph{redundancy}.
 %\emph{Reasoning} is a promising solution as pre-validation step to overcome this weakness. Reasoning (logical) is used in order to make the implicit knowledge explicit 
@@ -504,23 +515,13 @@ We remove redundancy by associating the constraint with the super-class \emph{pu
 In this paper, we investigate the role that reasoning plays in practical data validation and 
 how to overcome the major shortcomings when validating RDF data by performing reasoning prior to validation.
 
-Based on our work in the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group, 
-we identified and published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
-Each of these requirements corresponds to a constraint type from which concrete constraints are instantiated to be checked against RDF data.
-Requirements/constraint types are uniquely identified by alphanumeric technical identifiers.
-\emph{Minimum qualified cardinality restrictions} (\emph{R-75}) is an example of a constraint type which corresponds to the requirement {\small\emph{R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES}}. 
-We recently published a technical report \cite{BoschNolleAcarEckert2015}
-%\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} 
-(serving as appendix of this paper) 
-in which we explain each requirement/constraint type in detail and give examples for each represented by different constraint languages.
-For some of these constraint types, reasoning may be performed to improve data quality.
-
 %Reasoning and validation are very closely related. 
 %It should be possible (1) to perform reasoning prior to validation or (2) to validate without reasoning.
 %Both should be possible: (1) validation with reasoning and (2) validation without reasoning. 
 Validation environments should enable users to select which constraint types to use for completing data by reasoning 
 and which ones should be considered as constraint types about data accuracy and completeness which could be checked over the data once completed using reasoning.
-Therefore, we investigate the effect of reasoning to the validation process of each constraint type, i.e.,
+As reasoning may be applied to overcome the major shortcomings when validating RDF data, 
+we investigate the effect of reasoning to the validation process of each constraint type, i.e.,
 we examine for each constraint type if reasoning may be performed prior to validation in order to enhance data quality
 either (1) by resolving violations or (2) by raising valuable violations (Section \ref{reasoning}).
 %If reasoning can be performed to enhance data quality depends on the individual constraint type and not on the language. 
@@ -536,11 +537,11 @@ provides the foundational basis for constraint types.
 %\emph{DL} can be used to express constraints like (1) \emph{publications} must have at least one \emph{author} which must be a \emph{person} {\small\ms{(Publication $\sqsubseteq$ $\geq$1 author.Person)}} and
 %(2) \emph{books}, \emph{conference proceedings}, and \emph{journal articles} are \emph{publications} {\small\ms{(Book $\sqcup$} \ms{ConferenceArticle $\sqcup$} \ms{JournalArticle $\sqsubseteq$ Publication)}}. 
 
-RDF validation and reasoning assume different semantics which may lead to different results when applied to particular constraint types. %when particular constraint types are used for validation and for reasoning. 
+RDF validation and reasoning assume different semantics which may lead to different validation results when applied to particular constraint types. %when particular constraint types are used for validation and for reasoning. 
 Reasoning requires the {\em closed-world assumption} (\emph{OWA}) with the {\em non-unique name assumption} (\emph{nUNA}), 
 whereas RDF validation is classically based on the {\em closed-world assumption} (\emph{CWA}) and the {\em non-unique name assumption} (\emph{UNA}).
 Therefore, we investigate for each constraint type if validation results differ (1) if the \emph{CWA} or the \emph{OWA} and (2) if the \emph{UNA} or the \emph{nUNA}
-is assumed, i.e., we examine for each constraint type if (1) it depends on the \emph{CWA} and (2) if it depends on the \emph{UNA} (Section \ref{CWA-UNA-dependency}).
+is assumed, i.e., we examine for each constraint type (1) if the constraint type depends on the \emph{CWA} and (2) if the constraint type depends on the \emph{UNA} (Section \ref{CWA-UNA-dependency}).
 
 Using these findings, we are able to determine for the five most common constraint languages which constraint types they are able to express, i.e., we evaluate their constraint type specific expressivity (the evaluation is described in detail in the appendix of this paper \cite{BoschNolleAcarEckert2015}).
  %As we identified three constraint-specific complexity classes in the previous section, we are now able to determine the performance (i.e. complexity) of constraint languages.  It can be beneficial not using the most expressive constraint languages when additional rather subjective criteria are evaluated.
@@ -1113,9 +1114,10 @@ The contributions of this paper are:
 (1) We work out the role that reasoning plays in practical data validation and 
 how to overcome the major shortcomings when validating RDF data by performing reasoning prior to validation. 
 (2) We identified and published by today 81 types of constraints that are required by various stakeholders for data applications. 
-(3) For each constraint type we examine if validation results depend on different underlying semantics,
-    if reasoning may improve data quality, and 
-    how efficient in terms of runtime validation is performed with and without reasoning.
+(3) For each constraint type we examine
+    if reasoning may improve data quality, 
+    how efficient in terms of runtime validation is performed with and without reasoning, and
+		if validation results depend on the \emph{CWA} and on the \emph{UNA}.
 (4) Using these findings, we determine for the most common constraint languages which constraint types they are able to express
     and give directions for the further development of constraint languages.
 	
